--- a/index.html
+++ b/index.html
@@ -9,36 +9,10 @@
     <script src="./main.js" defer></script>
   </head>
   <body>
-    <h1>project 13</h1>
-    <table>
-      <caption>table caption</caption>
-      <thead>
-        <tr>
-          <th>name</th>
-          <th>phone</th>
-          <th>email</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>john</td>
-          <td>021 123 4567</td>
-          <td>me@email.com</td>
-        </tr>
-        <tr>
-          <td>mary</td>
-          <td>021 123 7890</td>
-          <td>you@email.com</td>
-        </tr>
-      </tbody>
-      <tfoot>
-        <tr>
-          <td></td>
-          <td></td>
-          <td>total</td>
-        </tr>
-      </tfoot>
-    </table>
+
+    <h1 class="heading">project 13</h1>
+    <button>click me</button>
+   
     <!-- <script src="./main.js"></script> -->
   </body>
 </html>
