css grid items content

--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
     <script src="./main.js" defer></script>
   </head>
   <body>
-
-    <h1 class="heading">project 13</h1>
-    <button>click me</button>
+    <section>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </section>
    
     <!-- <script src="./main.js"></script> -->
   </body>
