javascript event listeners and functions

--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     <script src="./main.js" defer></script>
   </head>
   <body>
-    <figure data-fig></figure>
-      <section id="text"></section>
-      <h1 class="heading" id="heading" data-h1>project 13</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus magni harum mollitia exercitationem, sunt neque, sed ut vel illum inventore aliquam voluptate earum ab sequi aperiam itaque nesciunt vero asperiores?</p>
-      <img width="" src="https://picsum.photos/id/100/200" data-image>
-    <!-- <script src="./main.js"></script> -->
+    <button data-btn>click me</button>
+    <button id="button">change background color</button>
+    <button id="toggle">toggle background color</button>
+    <button data-another-btn>another button</button>
   </body>
 </html>
